--- a/blocks/app-block.html
+++ b/blocks/app-block.html
@@ -1,4 +1,4 @@
-<div class="theme-app-extension__app-block">
+<div class="theme-app-extension__app-block" data-id="{{ block.id }}">
   <h1>This is an {{ block.settings.title }}</h1>
   {{ snippet 'logo-icon' }}
 </div>
@@ -9,6 +9,7 @@
   "target": "section",
   "stylesheet": "app-block.css",
   "javascript": "app-block.js",
+  "templates": ["Home"],
   "settings": [
     {
       "type": "text",
