feat: 🎸 支持多语言包

--- a/blocks/app-block.html
+++ b/blocks/app-block.html
@@ -1,6 +1,7 @@
 <div class="theme-app-extension__app-block" data-id="{{ block.id }}">
   <h1>This is an {{ block.settings.title }}</h1>
   {{ snippet 'logo-icon' }}
+  <h2>{{ t 'page_title' }}</h2>
 </div>
 
 {{#schema}}
