--- a/blocks/app-block.html
+++ b/blocks/app-block.html
@@ -10,7 +10,7 @@
   "target": "section",
   "stylesheet": ["app-block.css"],
   "javascript": ["app-block.js"],
-  "templates": ["Home"],
+  "templates": ["index"],
   "settings": [
     {
       "type": "text",
