fix: 多语言迁移

--- a/blocks/app-block.html
+++ b/blocks/app-block.html
@@ -15,10 +15,8 @@
     {
       "type": "text",
       "id": "title",
-      "label": {
-        "en": "Title",
-        "zh-hans-cn": "标题"
-      },
+      "label": "t:appBlock.block.settings.title.label",
+      "info":"t:appBlock.block.settings.title.info",
       "default": "App Block"
     }
   ],
