refactor: 💡 change image extension type

--- a/blocks/app-embed-block.html
+++ b/blocks/app-embed-block.html
@@ -7,7 +7,7 @@
 
 <style>
 .app-embed-block__container .app-embed-block__button {
-  background: url("{{ assets_url "sheep.jpeg" }}") no-repeat center;
+  background: url("{{ assets_url "sheep.jpg" }}") no-repeat center;
 }
 </style>
 
