refactor: 💡 change label key

--- a/blocks/app-embed-block.html
+++ b/blocks/app-embed-block.html
@@ -23,7 +23,7 @@
     {
       "type": "switch",
       "id": "showButton",
-      "label": "t:appBlock.block.settings.showButton.label",
+      "label": "t:appBlock.embed.settings.showButton.label",
       "default": true
     }
   ]
