fix: 🐛 fix some bugs

--- a/blocks/app-embed-block.html
+++ b/blocks/app-embed-block.html
@@ -26,6 +26,29 @@
       "label": "t:appBlock.embed.settings.showButton.label",
       "default": true
     }
-  ]
+  ],
+  "locales": {
+    "en": {
+      "page_title": "Page Title",
+      "app_embed_block": {
+        "title": "This is App Embed Block",
+        "button_text": "Click Button"
+      }
+    },
+    "zh-hans-cn": {
+      "page_title": "页面标题",
+      "app_embed_block": {
+        "title": "这是一个应用嵌入块",
+        "button_text": "点击按钮"
+      }
+    },
+    "zh-hans-tw": {
+      "page_title": "頁面標題",
+      "app_embed_block": {
+        "title": "這是一個應用嵌入塊",
+        "button_text": "點擊按鈕"
+      }
+    }
+  }
 }
 {{/schema}}
