feat: 🎸 完善 app embed block 样式

--- a/blocks/app-embed-block.html
+++ b/blocks/app-embed-block.html
@@ -1,22 +1,24 @@
 <div class="app-embed-block__container" data-id="{{ block.id }}" data-type="app-embed-block">
-  <h1>{{ t 'app_embed_block.title' }}</h1>
+  <p>{{ t 'app_embed_block.title' }}</p>
   {{#if block.settings.showButton }}
-    <button type="button" class="app-embed-block__button">{{ t 'app_embed_block.button_text' }}</button>
+  <div class="app-embed-block__wrapper">
+    <button type="button" class="app-embed-block__button">{{ block.settings.buttonText }}</button>
+  </div>
   {{/if}}
 </div>
 
 <style>
 .app-embed-block__container .app-embed-block__button {
-  background: url("{{ assets_url "sheep.jpg" }}") no-repeat center;
+  background: url('{{ assets_url "sheep.jpg" }}') no-repeat center;
 }
 </style>
 
 {{#schema}}
 {
-  "name": "App Embed Block",
+  "name": "t:appBlock.embed.name",
   "target": "body",
-  "javascript": ["app-embed-block.css"],
-  "stylesheet": ["app-embed-block.js"],
+  "javascript": ["app-embed-block.js"],
+  "stylesheet": ["app-embed-block.css"],
   "templates": [],
   "available_if": true,
   "settings": [
@@ -25,28 +27,31 @@
       "id": "showButton",
       "label": "t:appBlock.embed.settings.showButton.label",
       "default": true
+    },
+    {
+      "type": "text",
+      "id": "buttonText",
+      "label": "t:appBlock.embed.settings.buttonText.label",
+      "default": "Click Button"
     }
   ],
   "locales": {
     "en": {
       "page_title": "Page Title",
       "app_embed_block": {
-        "title": "This is App Embed Block",
-        "button_text": "Click Button"
+        "title": "This is App Embed Block"
       }
     },
     "zh-hans-cn": {
       "page_title": "页面标题",
       "app_embed_block": {
-        "title": "这是一个应用嵌入块",
-        "button_text": "点击按钮"
+        "title": "这是一个应用嵌入块"
       }
     },
     "zh-hans-tw": {
       "page_title": "頁面標題",
       "app_embed_block": {
-        "title": "這是一個應用嵌入塊",
-        "button_text": "點擊按鈕"
+        "title": "這是一個應用嵌入塊"
       }
     }
   }
