--- a/blocks/app-block.html
+++ b/blocks/app-block.html
@@ -1,5 +1,5 @@
 <div class="theme-app-extension__app-block" data-id="{{ block.id }}">
-  <h1>This is an {{ block.settings.title }}</h1>
+  <h1>This is an {{ block.settings.title }} - {{t 'page_title'}}</h1>
   {{ snippet 'logo-icon' }}
   <h2>{{ t 'page_title' }}</h2>
 </div>
@@ -19,6 +19,17 @@
       "info":"t:appBlock.block.settings.title.info",
       "default": "App Block"
     }
-  ]
+  ],
+  "locales": {
+    "en": {
+      "page_title": "Page Title"
+    },
+    "zh-hans-cn": {
+      "page_title": "页面标题"
+    },
+    "zh-hant-tw": {
+      "page_title": "頁面標題"
+    }
+  }
 }
 {{/schema}}
