--- a/blocks/app-embed-block.html
+++ b/blocks/app-embed-block.html
@@ -48,7 +48,7 @@
         "title": "这是一个应用嵌入块"
       }
     },
-    "zh-hans-tw": {
+    "zh-hant-tw": {
       "page_title": "頁面標題",
       "app_embed_block": {
         "title": "這是一個應用嵌入塊"
