refactor: 💡 使用 locale schema

--- a/blocks/app-block.html
+++ b/blocks/app-block.html
@@ -6,11 +6,11 @@
 
 {{#schema}}
 {
-  "name": "App Block",
+  "name": "t:appBlock.block.name",
   "target": "section",
   "stylesheet": ["app-block.css"],
   "javascript": ["app-block.js"],
-  "templates": ["index"],
+  "templates": [],
   "settings": [
     {
       "type": "text",
@@ -21,15 +21,7 @@
     }
   ],
   "locales": {
-    "en": {
-      "page_title": "Page Title"
-    },
-    "zh-hans-cn": {
-      "page_title": "页面标题"
-    },
-    "zh-hant-tw": {
-      "page_title": "頁面標題"
-    }
+    "page_title": "t:appBlock.block.pageTitle"
   }
 }
 {{/schema}}
