refactor: 💡 移除 locales 字段的 schema 配置

--- a/blocks/app-embed-block.html
+++ b/blocks/app-embed-block.html
@@ -35,7 +35,15 @@
     }
   ],
   "locales": {
-    "page_title": "t:appBlock.embed.pageTitle"
+    "en": {
+      "page_title": "Page Title"
+    },
+    "zh-hans-cn": {
+      "page_title": "页面标题"
+    },
+    "zh-hant-tw": {
+      "page_title": "頁面標題"
+    }
   }
 }
 {{/schema}}
